Fixed issue with z-index on header

--- a/beta/src/assets/scss/main.scss
+++ b/beta/src/assets/scss/main.scss
@@ -31,6 +31,8 @@ body {
 		width: 100%;
 		background-size: cover;
 		height: 100vh;
+    z-index: 999999;
+    position: relative;
 
 		.nav {
 			display: flex;
